syntax = "proto3";

package key_exchange;

option go_package = "github.com/globe-and-citizen/layer8-genesis-repo/grpc";

message KeyExchangeRequest {
    int64 public_key_x  = 1;
    int64 public_key_y  = 2;
}

message KeyExchangeResponse {
    int64 public_key_x  = 1;
    int64 public_key_y  = 2;
    bytes nonce         = 3;
}

service KeyExchange {
    rpc ExchangeKey(KeyExchangeRequest) returns (KeyExchangeResponse);
}
